@@ -58,9 +58,6 @@
 /* name of internal delivery user. */
 #define DBMAIL_DELIVERY_USERNAME "__@!internal_delivery_user!@__"
 
-/* users, aliases, mailboxes, messages, messageblks */
-#define DB_NTABLES 6
-
 /* 
  * PROTOTYPES 
  */
